revert to get(0) and remove(0) from getFirst() and removeFirst()